:sparkles: add DeleteFood api
